objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CB_Account_ID__c</fullName>
        <label>CB Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICO</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Business_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Business</label>
        <queue>Business</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance</label>
        <queue>Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Operations_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Operations</label>
        <queue>Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>